--- a/.project
+++ b/.project
@@ -35,6 +35,21 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>WebContent/WEB-INF/lib/ibatis-common-2.jar</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Downloads/ibatis-common-2.jar</locationURI>
+		</link>
+		<link>
+			<name>WebContent/WEB-INF/lib/ibatis-dao-2.jar</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Downloads/ibatis-dao-2.jar</locationURI>
+		</link>
+		<link>
+			<name>WebContent/WEB-INF/lib/ibatis-sqlmap-2.jar</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Downloads/ibatis-sqlmap-2.jar</locationURI>
+		</link>
+		<link>
 			<name>WebContent/WEB-INF/lib/jstl-1.2.jar</name>
 			<type>1</type>
 			<locationURI>PARENT-2-PROJECT_LOC/Downloads/jstl-1.2.jar</locationURI>
