--- a/.project
+++ b/.project
@@ -35,6 +35,16 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>WebContent/WEB-INF/lib/commons-dbcp-1.2.2.jar</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Downloads/commons-dbcp-1.2.2.jar</locationURI>
+		</link>
+		<link>
+			<name>WebContent/WEB-INF/lib/commons-pool-1.3.jar</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Downloads/commons-pool-1.3.jar</locationURI>
+		</link>
+		<link>
 			<name>WebContent/WEB-INF/lib/ibatis-common-2.jar</name>
 			<type>1</type>
 			<locationURI>PARENT-2-PROJECT_LOC/Downloads/ibatis-common-2.jar</locationURI>
@@ -53,6 +63,11 @@
 			<name>WebContent/WEB-INF/lib/jstl-1.2.jar</name>
 			<type>1</type>
 			<locationURI>PARENT-2-PROJECT_LOC/Downloads/jstl-1.2.jar</locationURI>
+		</link>
+		<link>
+			<name>WebContent/WEB-INF/lib/log4sql.jar</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Downloads/log4sql.jar</locationURI>
 		</link>
 		<link>
 			<name>WebContent/WEB-INF/lib/ojdbc14.jar</name>
